# matebook-16s-jack-daemon

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  matebook-16s-jack-daemon.service
Alsa/: Alsa.cxxm
Headers/: EventDev.hxx  Globals.hxx  JackHandler.hxx  OutPipeEnd.hxx  Poll.hxx  SignalPipe.hxx  Terminate.hxx  _PollData.hxx
Modules/: Wrappers.cxxm
Posix/: Exception.cxxm  File.cxxm  HdaDevice.cxxm  InputEvent.cxxm  Pipe.cxxm  Poll.cxxm  Pollable.cxxm  Posix.cxxm  Signal.cxxm
Sources/: EventDev.cxx  FindDeviceNode.cxx  JackHandler.cxx  Main.cxx  Poll.cxx  main.cxx
Tests/: Pipe.cxx
cmake/: archlinux.cmake  clang-ninja.cmake  cxx-module.cmake  tests.cmake
package/: PKGBUILD  PKGBUILD.in
